[gd_scene load_steps=12 format=3 uid="uid://ba6uwlxv4j5ev"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7dwxx"]
[ext_resource type="Texture2D" uid="uid://3qfb5r4577th" path="res://assets/sprites/hand.png" id="2_wovxr"]
[ext_resource type="Texture2D" uid="uid://dnadd3iurm13m" path="res://assets/sprites/crosshair.png" id="3_gml2l"]
[ext_resource type="Texture2D" uid="uid://cfj7nv0r43ajy" path="res://assets/sprites/hand2.png" id="3_qw4ts"]
[ext_resource type="Texture2D" uid="uid://cw42vb05cgpy0" path="res://assets/ui/health bar.png" id="4_pj5w1"]
[ext_resource type="AudioStream" uid="uid://p8i436qsd4fa" path="res://assets/sounds/throw.wav" id="5_oajm2"]
[ext_resource type="AudioStream" uid="uid://uwn1wd1r34ex" path="res://assets/sounds/hurt.wav" id="6_nds27"]
[ext_resource type="AudioStream" uid="uid://brkcho8mqt58p" path="res://assets/sounds/step.wav" id="7_1csca"]
[ext_resource type="AudioStream" uid="uid://co3xtc5j10wqy" path="res://assets/sounds/collect.wav" id="7_rv3dd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8sl6o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_b30oj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wovxr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qw4ts")
}, {
"duration": 1.0,
"texture": ExtResource("3_qw4ts")
}, {
"duration": 1.0,
"texture": ExtResource("3_qw4ts")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_7dwxx")

[node name="PlayerArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8sl6o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8sl6o")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hand" type="AnimatedSprite2D" parent="UI/Control"]
position = Vector2(251, 128)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_b30oj")
animation = &"shoot"
autoplay = "idle"
frame = 2
frame_progress = 1.0

[node name="Crosshair" type="Sprite2D" parent="UI/Control"]
position = Vector2(171, 96)
texture = ExtResource("3_gml2l")

[node name="HealthBarBG" type="Sprite2D" parent="UI/Control"]
position = Vector2(39, 173)
texture = ExtResource("4_pj5w1")

[node name="HealthBar" type="ProgressBar" parent="UI/Control"]
modulate = Color(0, 0.890625, 0.210938, 1)
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 170.0
offset_right = 65.0
offset_bottom = 175.0
max_value = 3.0
step = 1.0
value = 3.0
rounded = true
show_percentage = false

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_oajm2")
bus = &"SFX"

[node name="HurtSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nds27")

[node name="CollectSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rv3dd")

[node name="FootstepTimer" type="Timer" parent="."]
one_shot = true

[node name="FootstepSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1csca")
bus = &"SFX"

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_player_area_area_exited"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
